--- a/resume2.html
+++ b/resume2.html
@@ -2,30 +2,30 @@
 <html>
     <head>
         <title>HTML & CSS Cheat Sheet</title>
-        <link href="resum.css" rel="stylesheet">
+        <link href="ressume.css" rel="stylesheet">
 
 
     <body>
 
-        <div class="resume">
+        <div class="rr2">
         <h1>Jameka Harmon</h1>
         <h3>(302) 593-6361</h3>
         <h3>jmediaatworks@gmail</h3>
         <h3>Address</h3>
         </div>
-        <div class="r1">
+        <div class="rr1">
         <h2>Experience</h2>
         <h2>June 2019 - Present Photographer / Videographer, JHMediaatworks Creates custom short films, sound tracks, and moive trailers for clients. Provides exceptional service by ensuring that clients receive exactly what they desire in regards to their print and digital media needs.</h2>
         </div>
-        <div class="resume">
+        <div class="re">
         <h2>Skills</h2>
         <h3>Great problem solving and critcal thinking skills</h3>
         <h3>Strong work ethic</h3>
         <h3>Effective time management skills</h3>
-        </div>
-        <div class="resume">
         <h2>Education</h2>
-        <h2>Related course work</h2>
+            </div>
+            <div class="re">
+                <h2>Related course work</h2>
         <ul>
             <li><h3>Film making</h3></li>
             <li><h3>Photography</h3></li>
@@ -40,26 +40,38 @@
         </ul>
         <h3><b>Dual Enrollment Business 101 (Delaware Techical & Community College)</b></h3>
         </div>
-        <div class="resume">
+        <div class="re">
         <h2>Seeking a position that affords the opportunity to utilize the skills that I have acquired through education and work experience.</h2>
         </div>
-        <div class="resume">
+        <div class="re">
         <h2>Wide-range knowledge of film and video projects from inception to completion. Effective at organizing and coordinating shoots; experience using production equipment. Conduct scrip analysis and contribute to script changes. Write and edit scenes, treatments, and scrips; comptent in film and sound editing.</h2>
         </div>
-        <div class="resume">
+        <div class="re">
         <h2>Cast, directed, and co-produced numerous film and video projects. Planned, organized, and budgeted film shoots utilizing movie magic budgeting and sheduling. Editing projects. Performed sound editing in GrageBand. Worte scenes, treatments,and portions of scripts</h2>
         </div>
-        <div class="resume">
+        <div class="re">
         <h2>Activities</h2>    
         <h3>Delcastle Cougar Volunteer Leader (2016-2020)</h3>
         <h3>EntrePrep Summer Residential Institue UDLE (2018-2019)</h3>
         <h3>Art club (2016-2020)</h3>
         <h3>Animal club (2016-2020)</h3>
         </div>
-        <div class="resume">
+        <img src="https://i.imgur.com/jzqOQrW.gif" alt="activies">
+       <div class="re">
         <h2>References</h2>
         <h4>Gary Phillps (302) 598-0601</h4>
         <h4>Elizbeth Abell (302) 593-6251</h4>
         </div>
     </body>
+    <style>
+        body{
+    background-image: url('https://cdn.lowgif.com/full/84b53625acef85c8-wg-wallpapers-general-thread-6932770.gif');
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: cover;
+  color: white;
+  }
+    </style>
+        <img src="https://miro.medium.com/max/1044/1*XYivzEvNqSJw5SWwm3MnWA.gif" alt="film">
+    
 </html>
