--- a/resume.html
+++ b/resume.html
@@ -3,63 +3,68 @@
     <head>
         <title>HTML & CSS Cheat Sheet</title>
         <link href="resum.css" rel="stylesheet">
-
+        </head>
 
     <body>
+        
+        <div class="resume">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS40Ory8IOPLpzWCbejMyie6vYf8e7vT3M5Nw&usqp=CAU" alt="Avatar">
+            <form action="/action_page.php">
+                <label for="fname">First name:</label>
+                <input type="text" id="fname" name="fname"><br><br>
+                <label for="lname">Last name:</label>
+                <input type="text" id="lname" name="lname"><br><br>
+              </form>
+        </div>
 
-        <div class="resume">
-        <h1>Jameka Harmon</h1>
-        <h3>(302) 593-6361</h3>
-        <h3>jmediaatworks@gmail</h3>
-        <h3>Address</h3>
-        </div>
         <div class="r1">
-        <h2>Experience</h2>
-        <h2>June 2019 - Present Photographer / Videographer, JHMediaatworks Creates custom short films, sound tracks, and moive trailers for clients. Provides exceptional service by ensuring that clients receive exactly what they desire in regards to their print and digital media needs.</h2>
+            <form>
+                <p>
+                    Experience               
+                 </p>
+                <textarea name="comments" cols="20" rows="4"> Enter your comments...</textarea>
+            </form>
         </div>
-        <div class="resume">
-        <h2>Skills</h2>
-        <h3>Great problem solving and critcal thinking skills</h3>
-        <h3>Strong work ethic</h3>
-        <h3>Effective time management skills</h3>
+
+        <div class="r1">
+            <form>
+                <p>
+                    Skills
+                </p>
+                <textarea name="comments" cols="20" rows="4"> Enter your comments...</textarea>
+            </form>
         </div>
-        <div class="resume">
-        <h2>Education</h2>
-        <h2>Related course work</h2>
-        <ul>
-            <li><h3>Film making</h3></li>
-            <li><h3>Photography</h3></li>
-            <li><h3>Music production</h3></li>
-            <li><h3>Music Arrangement-GrageBand</h3></li>
-            <li><h3>Film Editing-Final Cut Pro X</h3></li>
-            <li><h3>Graphic Design:Abode photoshop & Illustartor</h3></li>
-            <li><h3>Office procedurse and technology</h3></li>
-            <li><h3>Business Ownership</h3></li>
-            <li><h3>Marketing</h3></li>
-            <li><h3>Advertising</h3></li>
-        </ul>
-        <h3><b>Dual Enrollment Business 101 (Delaware Techical & Community College)</b></h3>
+
+        <div class="r1">
+            <form>
+                <p>
+                    Education
+                </p>
+                <textarea name="comments" cols="20" rows="4"> Enter your comments...</textarea>
+            </form>
+
         </div>
-        <div class="resume">
-        <h2>Seeking a position that affords the opportunity to utilize the skills that I have acquired through education and work experience.</h2>
+
+        <div class="r1">
+                <form>
+                    <p>
+                        Action
+                    </p>
+                    <textarea name="comments" cols="20" rows="4"> Enter your comments...</textarea>
+                </form>
         </div>
-        <div class="resume">
-        <h2>Wide-range knowledge of film and video projects from inception to completion. Effective at organizing and coordinating shoots; experience using production equipment. Conduct scrip analysis and contribute to script changes. Write and edit scenes, treatments, and scrips; comptent in film and sound editing.</h2>
+
+        <div class="r1">
+                <form>
+                    <p>
+                        References
+                    </p>
+                    <textarea name="comments" cols="20" rows="4"> Enter your comments...</textarea>
+                </form>
         </div>
-        <div class="resume">
-        <h2>Cast, directed, and co-produced numerous film and video projects. Planned, organized, and budgeted film shoots utilizing movie magic budgeting and sheduling. Editing projects. Performed sound editing in GrageBand. Worte scenes, treatments,and portions of scripts</h2>
-        </div>
-        <div class="resume">
-        <h2>Activities</h2>    
-        <h3>Delcastle Cougar Volunteer Leader (2016-2020)</h3>
-        <h3>EntrePrep Summer Residential Institue UDLE (2018-2019)</h3>
-        <h3>Art club (2016-2020)</h3>
-        <h3>Animal club (2016-2020)</h3>
-        </div>
-        <div class="resume">
-        <h2>References</h2>
-        <h4>Gary Phillps (302) 598-0601</h4>
-        <h4>Elizbeth Abell (302) 593-6251</h4>
+        <div class="suu">
+        <input type="submit" value="Submit">
         </div>
     </body>
+ 
 </html>
