finish resume add somethings as well with messing with some grids

--- a/resume2.html
+++ b/resume2.html
@@ -87,4 +87,5 @@
     <div class="ime">
         <img src="https://miro.medium.com/max/1044/1*XYivzEvNqSJw5SWwm3MnWA.gif" alt="film" width="200" height="200">
     </div>
+    <meta name="viewport" content="width=device-width, initial-scales=1">
 </html>
