--- a/resume.html
+++ b/resume.html
@@ -66,5 +66,10 @@
         <input type="submit" value="Submit">
         </div>
     </body>
- <meta name="viewport" content="width=device-width, initial-scales=1">
+
+
+
+ <meta name="viewport" content="width=device-width" initial-scales="1">
+
+
 </html>
